<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pg_cpp_python_boost</name>
  <version>0.0.0</version>
  <description>Playground to test boost stuff</description>
  <maintainer email="ssrivatsa@houstonmechatronics.com">Siddharth Srivatsa</maintainer>
  <license>Houston Mechatronics Inc.</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <!-- buildtool_depend>boost_python</buildtool_depend -->

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
